onboarding: accept dpop auth in header request
